fix wrapping

--- a/app/assets/javascripts/screens/components/mobile-header/mobile-header.scss
+++ b/app/assets/javascripts/screens/components/mobile-header/mobile-header.scss
@@ -51,11 +51,11 @@
   left: 15px;
   right: 15px;
   box-shadow: 1px 1px 10px rgba(0,0,0,.2);
-  padding: 20px 40px;
+  padding: 20px 30px;
   display: flex;
   justify-content: center;
   flex-direction: column;
   text-align: center;
   z-index: 2;
-  white-space: pre;
+  white-space: pre-wrap;
 }
